--- a/index.html
+++ b/index.html
@@ -2,278 +2,162 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>4x4 Vakantiebeurs</title>
+  <title>4x4 Vakantiebeurs Map (Leaflet + SVG)</title>
   <meta name="viewport" content="width=device-width, initial-scale=1">
+  <!-- Leaflet CSS -->
+  <link rel="stylesheet" href="https://unpkg.com/leaflet/dist/leaflet.css" />
   <style>
-    /* ====== Base Styles ====== */
-    body {
+    html, body {
+      height: 100%;
+      margin: 0;
+      padding: 0;
       font-family: 'Segoe UI', Arial, sans-serif;
       background: #f6f6f6;
-      margin: 0;
-      padding: 0;
-      height: 100vh;
     }
-
-    /* ====== Map Container ====== */
-    .map-container {
-      position: relative;
+    #map {
       width: 100vw;
       height: 100vh;
-      margin: 0;
-      padding: 0;
-      background: #fff;
-      border-radius: 0;
-      box-shadow: none;
-      overflow: hidden;
-    }
-
-    /* ====== SVG Background Map ====== */
-    .svg-bg {
-      position: absolute;
-      top: 0;
-      left: 0;
-      width: 100vw;
-      height: 100vh;
-      max-width: 100vw;
-      max-height: 100vh;
-      display: block;
-      object-fit: contain;
-      border-radius: 0;
       z-index: 1;
     }
-
-    /* ====== Title Overlay ====== */
-   .title-overlay {
-  position: absolute;
-  top: 5%;
-  left: 50%;
-  transform: translate(-50%, 0);
-  color: #1976d2;
-  background: rgba(255,255,255,0.85);
-  padding: 0.4em 1.2em;
-  border-radius: 16px;
-  font-size: 1.2em;      /* More modest default title size */
-  font-weight: bold;
-  box-shadow: 0 2px 18px rgba(0,0,0,0.11);
-  z-index: 5;
-  pointer-events: none;
-  text-align: center;
-  white-space: nowrap;   /* Force single line */
-  max-width: 90vw;
-  overflow: hidden;
-  text-overflow: ellipsis; /* If needed, show ... */
-}
-
-    /* ====== Standholder Circles (interactive) ====== */
-    .stand-circle {
+    .title-overlay {
       position: absolute;
-      width: 40px;
-      height: 40px;
-      border-radius: 50%;
-      background: #1976d2;
-      color: #fff;
-      text-align: center;
-      line-height: 40px;
+      top: 5%;
+      left: 50%;
+      transform: translate(-50%, 0);
+      color: #1976d2;
+      background: rgba(255,255,255,0.85);
+      padding: 0.4em 1.2em;
+      border-radius: 16px;
+      font-size: 1.2em;
       font-weight: bold;
-      font-size: 17px;
-      cursor: pointer;
-      border: 2px solid #fff;
-      box-shadow: 0 2px 8px rgba(0,0,0,0.13);
-      transition: background 0.2s;
-      z-index: 10;
+      box-shadow: 0 2px 18px rgba(0,0,0,0.11);
+      z-index: 400;
+      pointer-events: none;
+      text-align: center;
+      white-space: nowrap;
+      max-width: 90vw;
+      overflow: hidden;
+      text-overflow: ellipsis;
     }
-    .stand-circle:hover, .stand-circle:focus {
-      background: #004ba0;
-      outline: none;
+    @media (max-width: 600px) {
+      .title-overlay {
+        font-size: 1em;
+        padding: 0.3em 0.7em;
+      }
     }
-
-    /* ====== Modal Styles (popup info) ====== */
-    .modal-bg { 
-      display: none;
-      position: fixed;
-      left:0;top:0;right:0;bottom:0;
-      background:rgba(0,0,0,0.4);
-      align-items:center;
-      justify-content:center;
-      z-index: 100;
+    @media only screen and (orientation: portrait) {
+      #map {
+        filter: blur(5px);
+      }
+      .title-overlay {
+        filter: blur(5px);
+      }
+      body::before {
+        content: "Please rotate your device to landscape for the best experience!";
+        position: fixed;
+        top: 0; left: 0;
+        width: 100vw; height: 100vh;
+        background: rgba(255,255,255,0.96);
+        color: #1976d2;
+        display: flex; align-items: center; justify-content: center;
+        font-size: 1em;
+        z-index: 9999;
+        text-align: center;
+        padding: 1em;
+        pointer-events: auto;
+        filter: none;
+      }
     }
-    .modal {
-      background: #fff;
-      border-radius: 10px;
-      max-width: 340px;
-      padding: 2rem;
-      box-shadow: 0 4px 20px rgba(0,0,0,0.14);
+    @media only screen and (orientation: portrait) and (max-width: 600px) {
+      body::before {
+        font-size: 0.85em;
+        padding: 0.5em;
+      }
     }
-    .modal h2 { margin-top:0; margin-bottom: 0.5rem;}
-    .modal-desc { margin-bottom: 0.8rem;}
-    .close-btn {
-      margin-top: 1rem;
+    /* Stand label styles */
+    .stand-label {
       background: #1976d2;
       color: #fff;
-      border: none;
-      padding: 0.6rem 1.2rem;
-      border-radius: 5px;
-      cursor: pointer;
-      font-size: 1rem;
+      border-radius: 50%;
+      font-weight: bold;
+      font-size: 1em;
+      padding: 0.6em 0.9em;
+      text-align: center;
+      box-shadow: 0 2px 8px rgba(0,0,0,0.13);
+      border: 2px solid #fff;
     }
-    .close-btn:hover { background: #004ba0;}
-
-    /* ====== Responsive Adjustments ====== */
-    @media (max-width: 600px) {
-      .map-container { min-height: 320px; }
-      .svg-bg { height: 320px; }
-      .title-overlay {
-        font-size: 1em;        /* Smaller title on mobile */
-        padding: 0.3em 0.7em;  /* Less padding */
-      }
-      .modal { max-width: 95vw; padding: 1rem; }
-    }
-
-    /* ====== Orientation Handling ====== */
-    
-@media only screen and (orientation: portrait) {
-  .map-container::before {
-    content: "Please rotate your device to landscape for the best experience!";
-    position: fixed;
-    top: 0; left: 0;
-    width: 100vw; height: 100vh;
-    background: rgba(255,255,255,0.96);
-    color: #1976d2;
-    display: flex; align-items: center; justify-content: center;
-    font-size: 1em;
-    z-index: 9999;
-    text-align: center;
-    padding: 1em;
-    pointer-events: auto;
-    filter: none; /* Do NOT blur the overlay message */
-  }
-  .svg-bg, .stand-circle {
-    filter: blur(5px); /* Blur only map and circles */
-  }
-  .title-overlay {
-    filter: blur(5px); /* Blur the overlay title */
-  }
-}
-
-@media only screen and (orientation: portrait) and (max-width: 600px) {
-  .map-container::before {
-    font-size: 0.85em;
-    padding: 0.5em;
-  }
-}
   </style>
 </head>
 <body>
-  <div class="map-container" id="map-container">
-    <!-- ====== Overlaid page title (customizable) ====== -->
-    <div class="title-overlay">4x4 Vakantiebeurs</div>
-    <!-- ====== The SVG map is loaded here ====== -->
-    <img src="src/map.svg" alt="Event Map" class="svg-bg" id="svg-map">
-    <!-- ====== Standholder circles will be placed by JS ====== -->
-  </div>
-  
-  <!-- ====== Modal Popup for Standholder info ====== -->
-  <div class="modal-bg" id="modal-bg" onclick="hideModal()">
-    <div class="modal" id="modal" onclick="event.stopPropagation()">
-      <h2 id="modal-title"></h2>
-      <p><b>Stand:</b> <span id="modal-stand"></span></p>
-      <div class="modal-desc" id="modal-desc"></div>
-      <p>
-        <a id="modal-link" href="#" target="_blank" style="color:#1976d2;text-decoration:underline;font-weight:bold;">
-          Visit website
-        </a>
-      </p>
-      <button class="close-btn" onclick="hideModal()">Close</button>
-    </div>
-  </div>
-
+  <div id="map"></div>
+  <div class="title-overlay">4x4 Vakantiebeurs</div>
+  <!-- Leaflet JS -->
+  <script src="https://unpkg.com/leaflet/dist/leaflet.js"></script>
   <script>
-    // ==============================================================
-    // Load standholders.json and place circles on the SVG map
-    // ==============================================================
+    // === Configure SVG map bounds ===
+    // These bounds should match your SVG's coordinate system.
+    // For example, if your SVG's viewBox is "0 0 700 500":
+    const svgWidth = 700;
+    const svgHeight = 500;
+    // Leaflet image overlay bounds: [[southWestLat, southWestLng], [northEastLat, northEastLng]]
+    // We'll set the image overlay so that [0,0] is bottom left, [700,500] is top right.
+    // We'll use a simple "pseudo-coordinates" system for the SVG: y increases upward, x to right.
+    // Note: These are not real lat/lng. They are just for overlaying your SVG and markers.
 
-    // Cache-busting: Add a query string to always load latest JSON!
+    // SouthWest corner (bottom left): [0, 0]
+    // NorthEast corner (top right): [svgHeight, svgWidth] (Leaflet uses [lat, lng] i.e. [y, x])
+    const imageBounds = [[0, 0], [svgHeight, svgWidth]];
+
+    // Create the Leaflet map using the SVG coordinate system
+    const map = L.map('map', {
+      crs: L.CRS.Simple,
+      minZoom: -2,
+      maxZoom: 2,
+      zoom: 0,
+      center: [svgHeight/2, svgWidth/2], // center of the SVG
+      zoomControl: true
+    });
+
+    // Add SVG as image overlay
+    const svgOverlay = L.imageOverlay('src/map.svg', imageBounds).addTo(map);
+
+    // ======= Load standholders.json and add circles =======
+    // Each standholder should have x/y matching the SVG's viewBox
     fetch('src/data/standholders.json?v=' + Date.now())
       .then(response => response.json())
       .then(standholders => {
-        const container = document.getElementById('map-container');
-        const svgImg = document.getElementById('svg-map');
+        const markerLayer = L.layerGroup().addTo(map);
 
-        // Function to place standholder circles
-        function placeCircles() {
-          // Remove old circles (in case of resize or reload)
-          Array.from(document.getElementsByClassName('stand-circle')).forEach(e => e.remove());
-
-          // Get SVG image position and size relative to map container
-          const rect = svgImg.getBoundingClientRect();
-          const containerRect = container.getBoundingClientRect();
-          const offsetLeft = rect.left - containerRect.left;
-          const offsetTop = rect.top - containerRect.top;
-          const width = rect.width;
-          const height = rect.height;
-
-          // Place each standholder circle using coordinates from JSON
-          standholders.forEach((stand, i) => {
-            /**
-             * Stand coordinates (x, y) are relative to SVG's viewBox.
-             * Example: if viewBox is "0 0 700 500", then x:90, y:80 for a stand
-             * To place to correct pixel position, scale to SVG image size:
-             *   left = (x / 700) * width + offsetLeft - 20 (center circle)
-             *   top  = (y / 500) * height + offsetTop - 20
-             * Adjust -20 for half of circle width (40px).
-             */
-            const x = (stand.x / 700) * width + offsetLeft - 20;
-            const y = (stand.y / 500) * height + offsetTop - 20;
-
-            // Create the circle element
-            const el = document.createElement('div');
-            el.className = 'stand-circle';
-            el.setAttribute('tabindex', '0');
-            el.setAttribute('title', stand.name);
-            el.style.left = x + 'px';
-            el.style.top = y + 'px';
-            el.textContent = stand.stand;
-
-            // Click/Enter opens modal with info
-            el.onclick = () => showModal(stand);
-            el.onkeydown = (e) => { if (e.key === 'Enter') showModal(stand); }
-
-            // Add circle to map
-            container.appendChild(el);
-          });
+        function showMarkersIfZoom() {
+          markerLayer.clearLayers();
+          // Show circles only if zoom >= 1 (adjust as needed)
+          if (map.getZoom() >= 1) {
+            standholders.forEach(stand => {
+              // Convert SVG x/y to Leaflet pseudo-lat/lng
+              // Leaflet uses [lat, lng] so [y, x]
+              const marker = L.circleMarker([stand.y, stand.x], {
+                radius: 20,
+                color: "#1976d2",
+                fillColor: "#1976d2",
+                fillOpacity: 0.8,
+                weight: 2
+              });
+              marker.bindPopup(`
+                <h2 style="margin:0;font-size:1.1em">${stand.name}</h2>
+                <p><b>Stand:</b> ${stand.stand}</p>
+                <p style="margin:0 0 0.5em 0">${stand.description}</p>
+                ${stand.website ? `<a href="${stand.website}" target="_blank" style="color:#1976d2;text-decoration:underline;font-weight:bold;">Visit website</a>` : ''}
+              `);
+              marker.bindTooltip(stand.stand, {permanent: true, direction: 'center', className: 'stand-label', offset: [0,0]});
+              markerLayer.addLayer(marker);
+            });
+          }
         }
 
-        // Place circles after SVG loads (important for correct sizing)
-        svgImg.onload = placeCircles;
-        // Also place after a short delay, in case onload doesn't fire
-        setTimeout(placeCircles, 1000);
-        // Reposition circles on window resize
-        window.addEventListener('resize', placeCircles);
+        // Show/hide circles at startup and on zoom
+        showMarkersIfZoom();
+        map.on('zoomend', showMarkersIfZoom);
       });
-
-    // ==============================================================
-    // Modal logic: show/hide standholder information
-    // ==============================================================
-
-    /**
-     * Show modal popup for a standholder
-     * @param {Object} stand - standholder info from JSON
-     */
-    function showModal(stand) {
-      document.getElementById("modal-title").textContent = stand.name;
-      document.getElementById("modal-stand").textContent = stand.stand;
-      document.getElementById("modal-desc").textContent = stand.description;
-      document.getElementById("modal-link").href = stand.website;
-      document.getElementById("modal-link").textContent = (stand.website ? "Visit website" : "");
-      document.getElementById("modal-bg").style.display = "flex";
-    }
-
-    /**
-     * Hide modal popup
-     */
-    function hideModal() {
-      document.getElementById("modal-bg").style.display = "none";
-    }
   </script>
 </body>
 </html>
