--- a/index.html
+++ b/index.html
@@ -316,11 +316,11 @@
       propertyName: 'title',        // Search field (uses marker.options.title)
       initial: false,               // Don't prefill results on startup
       marker: false,                // Don't create a new marker when searching
-      animate: true,
+      // animate: true,
       moveToLocation: function(latlng, title, map) {
         // Define what happens when an item is found
         // Here: zoom in and center on the found marker
-            map.setView(latlng, 15);
+            map.setView(latlng, 2);
       // Store for later click
       markerLayer.eachLayer(function(layer) {
       if (layer.options.title === title) {
