--- a/index.html
+++ b/index.html
@@ -334,10 +334,11 @@
 
       // Open Markers Popup when searched for and found
 
-        searchControl.on('search:locationfound', function(e) {
-  e.layer.fire('click'); // Automatically open popup
-});
-      /*
+//        searchControl.on('search:locationfound', function(e) {
+//  e.layer.fire('click'); // Automatically open popup
+// });
+
+     
       // Listen for search result
       searchControl.on('search:locationfound', function(e) {
       lastFoundMarker = e.layer; // In case you want to get it here too
@@ -350,7 +351,7 @@
       lastFoundMarker = null; // Reset so it only happens once
       }
       });
-      */
+
    });
 
     
