--- a/index.html
+++ b/index.html
@@ -311,6 +311,8 @@
         // ============================================================
 
       var lastFoundMarker = null;
+      var needToOpenPopup = false; // State flag
+
       var searchControl = new L.Control.Search({
       layer: markerLayer,           // The layer to search within
       propertyName: 'title',        // Search field (uses marker.options.title)
@@ -321,36 +323,31 @@
         // Define what happens when an item is found
         // Here: zoom in and center on the found marker
             map.setView(latlng, 2);
-      // Store for later click
-      markerLayer.eachLayer(function(layer) {
+  // Find the marker by title and store
+    markerLayer.eachLayer(function(layer) {
       if (layer.options.title === title) {
         lastFoundMarker = layer;
+        needToOpenPopup = true; // Set flag to open popup after zoom
       }
-      });
-    }
     });
-      // Add the search control to the map UI (defaults to top right)
-      map.addControl(searchControl);
+  }
+});
+map.addControl(searchControl);
 
-      // Open Markers Popup when searched for and found
+// Listen for search result, ensure lastFoundMarker is set
+searchControl.on('search:locationfound', function(e) {
+  lastFoundMarker = e.layer;
+  needToOpenPopup = true;
+});
 
-//        searchControl.on('search:locationfound', function(e) {
-//  e.layer.fire('click'); // Automatically open popup
-// });
-
-     
-      // Listen for search result
-      searchControl.on('search:locationfound', function(e) {
-      lastFoundMarker = e.layer; // In case you want to get it here too
-      });
-
-      // After the zoom, open the popup
-      map.on('zoomend', function() {
-      if (lastFoundMarker) {
-      lastFoundMarker.fire('click');
-      lastFoundMarker = null; // Reset so it only happens once
-      }
-      });
+// After zoom, open the popup if needed
+map.on('zoomend', function() {
+  if (lastFoundMarker && needToOpenPopup) {
+    lastFoundMarker.fire('click');
+    needToOpenPopup = false; // Reset flag
+    lastFoundMarker = null;  // Reset marker
+  }
+});
 
    });
 
